# ahp-survey-app

./: README.md  docker-compose.yml
backend/: .dockerignore  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/core/: models.py  services.py
backend/scripts/: build_image.sh  config.sh  pull_and_run.sh
frontend/: index.html
frontend/public/files/: survey.json
frontend/src/components/: AhpForm.tsx  RankingTable.tsx
frontend/src/helpers/: ColorManager.ts
frontend/src/interfaces/: Input.ts  Model.ts
frontend/src/styles/utils/: variables.scss
frontend/src/views/: CreateSurvey.tsx  Home.tsx  ImportSurvey.tsx  ListSurveys.tsx  SurveyProfile.tsx  SurveyRanking.tsx
