[tool.poetry]
name = "red-pill"
version = "0.1.0"
description = ""
authors = ["Richard Zmija <zmija.ryszard@protonmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
python-multipart = "^0.0.18"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
